freest/test/prog/valid/functional/MultPrecedence/MultPrecedence.fst
module MultPrecedence where

precedence : Int
precedence = 2 + 3 * 4 + 5

main : Int
main = precedence

