freest/test/prog/Invalid/Scoping/ConflictingDefsDiffPatFun/ConflictingDefsDiffPatFun.fst
module ConflictingDefsDiffPatFun where

foo : Int -> Int -> Int
foo x x = 5